Create end point that returns a list of annual rainfalls in all available years for a specified basin
